@@ -1,5 +1,11 @@
 2008-03-16  Philip Withnall  <pwithnall@svn.gnome.org>
 
+	* src/plugins/youtube/youtube.py: Change to use the "api" data view
+	(meaning we don't download a load of useless HTML) and clean up the
+	code to get the video URL a little.
+
+2008-03-16  Philip Withnall  <pwithnall@svn.gnome.org>
+
 	* data/totem.ui: Add a broom icon to the "Clear Playlist" menu
 	entry. (Closes: #522623)
 
